Bug 420505 - Smoothing doesn't work if "Date" values are set as X-values
Summary: Smoothing doesn't work if "Date" values are set as X-values
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: general (other bugs)
Version First Reported In: latest
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-04-24 10:14 UTC by disuser
Modified: 2020-04-26 07:11 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.8
Sentry Crash Report:


Attachments
An example of smoothing (20.27 KB, application/x-labplot2)
2020-04-24 10:14 UTC, disuser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description disuser 2020-04-24 10:14:04 UTC
Smoothing doesn't work if "Date" values are set as X-values. However, it works if date is represented as Numeric. I attached the file.

1. Select "New cases".
2. Analyze and plot data > Smooth.
3. Whatever type of smoothing you choose, you will get:
"status: Not enough data points available.
Comment 1 disuser 2020-04-24 10:14:57 UTC
Created attachment 127820 [details]
An example of smoothing
Comment 2 Alexander Semke 2020-04-25 21:14:39 UTC
Git commit a5dbcefbc8137ed98d95eb463c90daab78dbaaac by Alexander Semke.
Committed on 25/04/2020 at 21:14.
Pushed by asemke into branch 'master'.

[analysis] allow to do smooting also for datetime and integer data.
FIXED-IN: 2.8

M  +26   -4    src/backend/worksheet/plots/cartesian/XYSmoothCurve.cpp

https://invent.kde.org/kde/labplot/commit/a5dbcefbc8137ed98d95eb463c90daab78dbaaac
Comment 3 disuser 2020-04-26 07:11:23 UTC
Thanks!