[analysis] allow to do smooting also for datetime and integer data.

BUG: 420505
FIXED-IN: 2.8